--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
-    <string name="app_name">cn</string>
+    <string name="app_name">CARD-IST</string>
     <string name="submit">Submit</string>
+    <string name="back">Back</string>
+    <string name="home">Form Isian</string>
+    <string name="tampil">Tampilan Data</string>
+    <string name="nama_lengkap">Nama Lengkap</string>
+    <string name="jenis_kelamin">Jenis Kelamin</string>
+    <string name="status_perkawinan">Status Perkawinan</string>
+    <string name="alamat">Alamat</string>
+    <string name="selamat_datang">Selamat Datang</string>
+    <string name="mobile_app">Mobile App</string>
+    <string name="tahun">2025</string>
 </resources>
